--- a/package.json
+++ b/package.json
@@ -7,16 +7,18 @@
   "license": "MIT",
   "main": "lib/index.js",
   "dependencies": {
-    "jade": "~1.3.0", 
-    "shortcode-parser": "0.0.1",
-    "async": "~0.2.10",
-    "debug": "~0.7.4",
-    "extend": "~1.2.1",
-    "multimatch": "^0.1.0"
+    "async": "~2.0.0",
+    "consolidate": "^0.14.1",
+    "debug": "~2.2.0",
+    "extend": "~3.0.0",
+    "lodash.omit": "^4.3.0",
+    "multimatch": "^2.1.0",
+    "shortcode-parser": "0.0.1"
   },
   "devDependencies": {
-    "mocha": "1.x",
-    "metalsmith": "0.x",
-    "assert-dir-equal": "0.0.1"
+    "assert-dir-equal": "1.0.1",
+    "jade": "^1.11.0",
+    "metalsmith": "2.x",
+    "mocha": "2.x"
   }
 }
